# sample-okf-llm-wiki

./: .gitignore  .mise.toml  CLAUDE.md  README.md
.claude/: settings.json
.claude-plugin/: marketplace.json
assets/: architecture.drawio
benchmark/: formula_1_questions.csv  formula_1_questions_athena.csv  translate_gold_to_athena.py
benchmark/mini_dev/: README.md  RESULTS.md  assemble_predictions.py  build_report.py  config.py  fetch_data.py  generate_workflow.js  load_all.py  load_bird_to_glue.py  mcp_query.py  prep.py  requirements.txt  run_eval.sh
docs/: API_REFERENCE.md  ARCHITECTURE.md  BENCHMARK_GUIDE.md  CHAT_AGENT.md  CONVENTIONS.md  DATA_SOURCES.md  LAKE_FORMATION.md  RECURSIVE_IMPROVEMENT.md  RELATIONSHIP_DISCOVERY.md
infra/compute/: agentcore_iam.tf  agentcore_runtimes.tf  athena.tf  code_interpreter.tf  control_api.tf  data.tf  incremental.tf  lambda_policies.tf  outputs.tf  reindex.tf  s3files.tf  ui.tf  variables.tf  versions.tf  vpc.tf
infra/durable/: cognito.tf  dynamodb.tf  observability.tf  outputs.tf  storage.tf  variables.tf  versions.tf
infra/modules/lambda/: main.tf  outputs.tf  variables.tf
okf-mcp/: .gitignore  .mcp.json
okf-mcp/.claude-plugin/: plugin.json
okf-mcp/scripts/: okf-headers-helper.sh  okf-mcp-token.py
okf-mcp/skills/refresh-okf-mcp-token/: SKILL.md
okf-mcp/skills/setup/: SKILL.md
quick-start-guide/: connect-an-agent.md  using-the-console.md
scripts/: .deployment.config.example  build_lambdas.sh  deploy.sh  refresh-okf-token.sh  run_tests.sh
services/chat/: Dockerfile  pyproject.toml  requirements.txt
services/chat/src/chat/: __init__.py  ask_human.py  ask_human_middleware.py  cancellation.py  charts.py  config.py  graph.py  live_streams.py  server.py  sql.py  threads.py  tools.py
services/chat/tests/: conftest.py  fakes.py  test_app.py  test_ask_human.py  test_ask_human_flow.py  test_cancellation.py  test_charts.py  test_config.py  test_graph.py  test_live_streams.py  test_server.py  test_sql.py  test_threads.py  test_tools.py
services/consumption_mcp/: Dockerfile  pyproject.toml  requirements.txt
services/consumption_mcp/src/consumption_mcp/: __init__.py  server.py  tools.py
services/consumption_mcp/tests/: conftest.py  fakes.py  test_server_wiring.py  test_tools.py
services/control_api/: pyproject.toml  requirements.txt
services/control_api/src/control_api/: __init__.py  app.py  handlers.py
services/control_api/tests/: conftest.py  fakes.py  test_annotations.py  test_app_router.py  test_chat_threads.py  test_handlers.py  test_lambda_handler.py  test_recursive_improvement.py
services/harvest/: Dockerfile  pyproject.toml  requirements.txt
services/harvest/skills/okf-authoring/: SKILL.md
services/harvest/skills/okf-authoring/references/: fact-types.md  spec-condensed.md  templates.md
services/harvest/skills/okf-authoring/references/sources/: athena-glue.md  index.md  redshift.md
services/harvest/src/harvest/: __init__.py  agent.py  annotations.py  clients.py  code_interpreter.py  entrypoint.py  finalize.py  fsutil.py  glue_source.py  graph_tools.py  guard_engine.py  metadata_export.py  okf_guard.py  prompts.py  redshift_source.py  runner.py  source_base.py  source_tools.py  status.py  steps.py
services/harvest/src/harvest/benchmark/: __init__.py  adjudicator.py  completion.py  extract.py  grader.py  questions.py  review_store.py  runner.py  setup.py  snapshot.py  solver.py  tool.py
services/harvest/tests/: fakes.py  test_annotations.py  test_benchmark_adjudicator.py  test_benchmark_completion.py  test_benchmark_extract.py  test_benchmark_grader.py  test_benchmark_questions.py  test_benchmark_round.py  test_benchmark_runner_integration.py  test_benchmark_session.py  test_benchmark_setup.py  test_benchmark_snapshot.py  test_benchmark_solver_debug.py  test_benchmark_wiring.py  test_code_interpreter.py  test_context_extractor_wiring.py  test_entrypoint_and_finalize.py  test_fsutil.py  test_glue_source.py  test_guard_engine.py  test_guard_middleware.py  test_index_isolation.py  test_metadata_export.py  test_model_config.py  test_prompts_source_aware.py  test_redshift_source.py  test_reference_author_wiring.py  test_review_store.py  test_review_wiring.py  test_runner_clean.py  test_runner_fleet.py  test_runner_sandbox.py  test_runner_status.py  test_scoped_session.py  test_skill_wiring.py  test_source_tools_framing.py  test_status.py  test_steps.py  test_steps_integration.py
services/incremental/: pyproject.toml  requirements.txt
services/incremental/src/incremental/: __init__.py  diff.py  handler.py  reconcile.py  store.py
services/incremental/tests/: conftest.py  fakes.py  test_diff.py  test_lambda_handler.py  test_process_event.py  test_reconcile.py
services/okf_aws/: pyproject.toml
services/okf_aws/src/okf_aws/: __init__.py  embeddings.py  model_factory.py  s3_bundle.py
services/okf_aws/tests/: test_embeddings.py  test_model_factory.py  test_s3_bundle.py
services/okf_core/: pyproject.toml
services/okf_core/src/okf_core/: __init__.py  annotations.py  benchmark_questions.py  chat_threads.py  concept_types.py  document.py  domain.py  embedding.py  guard.py  guidance.py  harvest_models.py  hive_types.py  index_gen.py  link_graph.py  links.py  paths.py  recursive_improvement.py  session.py  sources.py
services/okf_core/tests/: test_annotations.py  test_annotations_renderer_oracle.py  test_benchmark_questions.py  test_document.py  test_embedding.py  test_golden_bundle.py  test_guard.py  test_guidance.py  test_harvest_models.py  test_hive_types.py  test_index_gen.py  test_links_and_graph.py  test_recursive_improvement.py  test_session.py  test_sources.py
services/reindex/: README.md  pyproject.toml  requirements.txt
services/reindex/src/reindex/: __init__.py  handler.py
services/reindex/tests/: conftest.py  fakes.py  test_handler.py  test_process_record.py
tests/: test_e2e_harvest_offline.py
ui/: .env.example  README.md  callback.html  components.json  index.html  package-lock.json  package.json  vite.config.js
ui/src/: App.jsx  callback.jsx  index.css  main.jsx
(+53 files in other folders)
