[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "okf-consumption-mcp"
version = "0.1.0"
description = "OKF consumption MCP server: stateless streamable-HTTP FastMCP on Bedrock AgentCore Runtime"
requires-python = ">=3.11"
dependencies = [
    "okf-core",
    "okf-aws",
    "mcp>=1.28",
    "boto3>=1.43",
    # Observability: ADOT SDK (no LangChain instrumentor — this server is FastMCP).
    "aws-opentelemetry-distro>=0.10.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "moto[s3,dynamodb]>=5.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
