[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "okf-aws"
version = "0.1.0"
description = "Shared boto3 helpers for OKF on AWS: Titan embeddings, S3 Vectors, S3 bundle keys"
requires-python = ">=3.11"
dependencies = ["okf-core", "boto3>=1.43"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "moto[s3,dynamodb]>=5.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
