[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "okf-core"
version = "0.1.0"
description = "Shared OKF primitives: document model, concept paths, OKF guard rules, link graph, index generation, Hive type parsing"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.3",
    "networkx>=3.4",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
