[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "okf-core"
version = "0.1.0"
description = "Shared OKF primitives: document model, concept paths, OKF guard rules, link graph, index generation, Hive type parsing"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.3",
    "networkx>=3.4",
]

[project.optional-dependencies]
# markdown-it-py is a TEST-ONLY oracle: test_annotations_renderer_oracle.py
# renders a kitchen-sink doc with a real CommonMark renderer (same lineage as the
# UI's react-markdown) to verify annotation orphan re-anchoring against genuine
# rendered text. The runtime stays dep-minimal (pyyaml + networkx only); the test
# importorskips it, so it's skipped — not failed — if this extra isn't installed.
dev = ["pytest>=7.0", "markdown-it-py>=3.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
